--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Мн. Мөнх-Эрдэнэ.</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <meta name="keywords" content="Mn, mnmonherdene, monherdene" />
+    <meta name="description" content="Энэ миний сайт юм өө" />
+    <meta name="author" content="Мөнх-Эрдэнэ" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header>
-            <nav class="navbar">
-                <img src="logo.png" alt="Logo" width="45">
-                <div class="links">
-                    <div>Манайхан</div>
-                    <div class="hello">Сайн уу?</div>
-                </div>
-            </nav>
-        </header>
-        <main style="text-align: center;">
-            <h1>Наймаг Мн. Мөнх-Эрдэнэ гэдэг.</h1>
-            <p>Төрөл бүрийн вебсайтын үйлчилгээ хийдэг.</p>
-            <img src="profile.png" alt="Profile" width="200">
-        </main>
+      <header>
+        <nav class="navbar">
+          <img src="logo.png" alt="Logo" width="45" />
+          <div class="links">
+            <div>Манайхан</div>
+            <div class="hello">Сайн уу?</div>
+          </div>
+        </nav>
+      </header>
+      <main style="text-align: center">
+        <h1>Наймаг Мн. Мөнх-Эрдэнэ гэдэг.</h1>
+        <p>Төрөл бүрийн вебсайтын үйлчилгээ хийдэг.</p>
+        <img src="profile.png" alt="Profile" width="200" />
+      </main>
     </div>
-</body>
-
+  </body>
 </html>
